seaqt/QtCore/gen_qprocess.nim

proc fQProcess_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QProcess_virtualbase_bytesToWrite".}
proc fcQProcess_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QProcess_override_virtual_bytesToWrite".}
proc fQProcess_virtualbase_isSequential(self: pointer, ): bool{.importc: "QProcess_virtualbase_isSequential".}
proc fcQProcess_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QProcess_override_virtual_isSequential".}
proc fQProcess_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QProcess_virtualbase_canReadLine".}
proc fcQProcess_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QProcess_override_virtual_canReadLine".}
proc fQProcess_virtualbase_close(self: pointer, ): void{.importc: "QProcess_virtualbase_close".}
proc fcQProcess_override_virtual_close(self: pointer, slot: int) {.importc: "QProcess_override_virtual_close".}
proc fQProcess_virtualbase_atEnd(self: pointer, ): bool{.importc: "QProcess_virtualbase_atEnd".}
proc fcQProcess_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QProcess_override_virtual_atEnd".}
proc fQProcess_virtualbase_setupChildProcess(self: pointer, ): void{.importc: "QProcess_virtualbase_setupChildProcess".}
proc fcQProcess_override_virtual_setupChildProcess(self: pointer, slot: int) {.importc: "QProcess_override_virtual_setupChildProcess".}
proc fQProcess_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QProcess_virtualbase_readData".}
proc fcQProcess_override_virtual_readData(self: pointer, slot: int) {.importc: "QProcess_override_virtual_readData".}
proc fQProcess_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QProcess_virtualbase_writeData".}
proc fcQProcess_override_virtual_writeData(self: pointer, slot: int) {.importc: "QProcess_override_virtual_writeData".}
proc fQProcess_virtualbase_pos(self: pointer, ): clonglong{.importc: "QProcess_virtualbase_pos".}
proc fcQProcess_override_virtual_pos(self: pointer, slot: int) {.importc: "QProcess_override_virtual_pos".}
proc fQProcess_virtualbase_size(self: pointer, ): clonglong{.importc: "QProcess_virtualbase_size".}
proc fcQProcess_override_virtual_size(self: pointer, slot: int) {.importc: "QProcess_override_virtual_size".}
proc fQProcess_virtualbase_seek(self: pointer, pos: clonglong): bool{.importc: "QProcess_virtualbase_seek".}
proc fcQProcess_override_virtual_seek(self: pointer, slot: int) {.importc: "QProcess_override_virtual_seek".}
proc fQProcess_virtualbase_reset(self: pointer, ): bool{.importc: "QProcess_virtualbase_reset".}
proc fcQProcess_override_virtual_reset(self: pointer, slot: int) {.importc: "QProcess_override_virtual_reset".}
proc fQProcess_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QProcess_virtualbase_readLineData".}
proc fcQProcess_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QProcess_override_virtual_readLineData".}
proc fQProcess_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QProcess_virtualbase_event".}
proc fcQProcess_override_virtual_event(self: pointer, slot: int) {.importc: "QProcess_override_virtual_event".}
proc fQProcess_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QProcess_virtualbase_eventFilter".}
proc fcQProcess_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QProcess_override_virtual_eventFilter".}
proc fQProcess_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QProcess_virtualbase_timerEvent".}
proc fcQProcess_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QProcess_override_virtual_timerEvent".}
proc fQProcess_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QProcess_virtualbase_childEvent".}
proc fcQProcess_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QProcess_override_virtual_childEvent".}
proc fQProcess_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QProcess_virtualbase_customEvent".}
proc fcQProcess_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QProcess_override_virtual_customEvent".}
proc fQProcess_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QProcess_virtualbase_connectNotify".}
proc fcQProcess_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QProcess_override_virtual_connectNotify".}
proc fQProcess_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QProcess_virtualbase_disconnectNotify".}
proc fcQProcess_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QProcess_override_virtual_disconnectNotify".}
proc fcQProcess_delete(self: pointer) {.importc: "QProcess_delete".}


func init*(T: type gen_qprocess_types.QProcessEnvironment, h: ptr cQProcessEnvironment): gen_qprocess_types.QProcessEnvironment =
  T(h: h)
proc create*(T: type gen_qprocess_types.QProcessEnvironment, ): gen_qprocess_types.QProcessEnvironment =
  gen_qprocess_types.QProcessEnvironment.init(fcQProcessEnvironment_new())

proc create*(T: type gen_qprocess_types.QProcessEnvironment, other: gen_qprocess_types.QProcessEnvironment): gen_qprocess_types.QProcessEnvironment =
  gen_qprocess_types.QProcessEnvironment.init(fcQProcessEnvironment_new2(other.h))

proc operatorAssign*(self: gen_qprocess_types.QProcessEnvironment, other: gen_qprocess_types.QProcessEnvironment): void =
  fcQProcessEnvironment_operatorAssign(self.h, other.h)

proc swap*(self: gen_qprocess_types.QProcessEnvironment, other: gen_qprocess_types.QProcessEnvironment): void =
  fcQProcessEnvironment_swap(self.h, other.h)

proc operatorEqual*(self: gen_qprocess_types.QProcessEnvironment, other: gen_qprocess_types.QProcessEnvironment): bool =
  fcQProcessEnvironment_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qprocess_types.QProcessEnvironment, other: gen_qprocess_types.QProcessEnvironment): bool =
  fcQProcessEnvironment_operatorNotEqual(self.h, other.h)

proc isEmpty*(self: gen_qprocess_types.QProcessEnvironment, ): bool =
  fcQProcessEnvironment_isEmpty(self.h)

proc clear*(self: gen_qprocess_types.QProcessEnvironment, ): void =
  fcQProcessEnvironment_clear(self.h)

proc contains*(self: gen_qprocess_types.QProcessEnvironment, name: string): bool =
  fcQProcessEnvironment_contains(self.h, struct_miqt_string(data: name, len: csize_t(len(name))))

proc insert*(self: gen_qprocess_types.QProcessEnvironment, name: string, value: string): void =
  fcQProcessEnvironment_insert(self.h, struct_miqt_string(data: name, len: csize_t(len(name))), struct_miqt_string(data: value, len: csize_t(len(value))))

proc remove*(self: gen_qprocess_types.QProcessEnvironment, name: string): void =
  fcQProcessEnvironment_remove(self.h, struct_miqt_string(data: name, len: csize_t(len(name))))

proc value*(self: gen_qprocess_types.QProcessEnvironment, name: string): string =
  let v_ms = fcQProcessEnvironment_value(self.h, struct_miqt_string(data: name, len: csize_t(len(name))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc toStringList*(self: gen_qprocess_types.QProcessEnvironment, ): seq[string] =
  var v_ma = fcQProcessEnvironment_toStringList(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc keys*(self: gen_qprocess_types.QProcessEnvironment, ): seq[string] =
  var v_ma = fcQProcessEnvironment_keys(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret

proc insert*(self: gen_qprocess_types.QProcessEnvironment, e: gen_qprocess_types.QProcessEnvironment): void =
  fcQProcessEnvironment_insertWithQProcessEnvironment(self.h, e.h)

proc systemEnvironment*(_: type gen_qprocess_types.QProcessEnvironment, ): gen_qprocess_types.QProcessEnvironment =
  gen_qprocess_types.QProcessEnvironment(h: fcQProcessEnvironment_systemEnvironment())

proc value*(self: gen_qprocess_types.QProcessEnvironment, name: string, defaultValue: string): string =
  let v_ms = fcQProcessEnvironment_value2(self.h, struct_miqt_string(data: name, len: csize_t(len(name))), struct_miqt_string(data: defaultValue, len: csize_t(len(defaultValue))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc delete*(self: gen_qprocess_types.QProcessEnvironment) =
  fcQProcessEnvironment_delete(self.h)

func init*(T: type gen_qprocess_types.QProcess, h: ptr cQProcess): gen_qprocess_types.QProcess =
  T(h: h)
proc create*(T: type gen_qprocess_types.QProcess, ): gen_qprocess_types.QProcess =
  gen_qprocess_types.QProcess.init(fcQProcess_new())

proc create*(T: type gen_qprocess_types.QProcess, parent: gen_qobject_types.QObject): gen_qprocess_types.QProcess =
  gen_qprocess_types.QProcess.init(fcQProcess_new2(parent.h))

proc metaObject*(self: gen_qprocess_types.QProcess, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQProcess_metaObject(self.h))

proc metacast*(self: gen_qprocess_types.QProcess, param1: cstring): pointer =
  fcQProcess_metacast(self.h, param1)

proc tr*(_: type gen_qprocess_types.QProcess, s: cstring): string =
  let v_ms = fcQProcess_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qprocess_types.QProcess, s: cstring): string =
  let v_ms = fcQProcess_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc start*(self: gen_qprocess_types.QProcess, program: string, arguments: seq[string]): void =
  var arguments_CArray = newSeq[struct_miqt_string](len(arguments))
  for i in 0..<len(arguments):
    arguments_CArray[i] = struct_miqt_string(data: arguments[i], len: csize_t(len(arguments[i])))

  fcQProcess_start(self.h, struct_miqt_string(data: program, len: csize_t(len(program))), struct_miqt_array(len: csize_t(len(arguments)), data: if len(arguments) == 0: nil else: addr(arguments_CArray[0])))

proc start*(self: gen_qprocess_types.QProcess, command: string): void =
  fcQProcess_startWithCommand(self.h, struct_miqt_string(data: command, len: csize_t(len(command))))

proc start*(self: gen_qprocess_types.QProcess, ): void =
  fcQProcess_start2(self.h)

proc startDetached*(self: gen_qprocess_types.QProcess, ): bool =
  fcQProcess_startDetached(self.h)

proc open*(self: gen_qprocess_types.QProcess, mode: cint): bool =
  fcQProcess_open(self.h, cint(mode))

proc program*(self: gen_qprocess_types.QProcess, ): string =
  let v_ms = fcQProcess_program(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setProgram*(self: gen_qprocess_types.QProcess, program: string): void =
  fcQProcess_setProgram(self.h, struct_miqt_string(data: program, len: csize_t(len(program))))

proc arguments*(self: gen_qprocess_types.QProcess, ): seq[string] =
  var v_ma = fcQProcess_arguments(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  vx_ret
